--- a/embedded/slotcar-race/index.html
+++ b/embedded/slotcar-race/index.html
@@ -376,7 +376,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "<p>At the university me and my partner have ....."
+          text: "Tibor Simon - <p>At the university me and my partner have ....."
         }
       }
     }
