--- a/programming/writing-an-equation-engine/index.html
+++ b/programming/writing-an-equation-engine/index.html
@@ -771,7 +771,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "<p>In the previous article we have discussed ....."
+          text: "Tibor Simon - <p>In the previous article we have discussed ....."
         }
       }
     }
