--- a/tools/buspirate-setup-for-osx/index.html
+++ b/tools/buspirate-setup-for-osx/index.html
@@ -334,7 +334,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "<p>As I have switched to mac in the past days, ....."
+          text: "Tibor Simon - <p>As I have switched to mac in the past days, ....."
         }
       }
     }
