--- a/web/redirect-external-links-to-new-tab/index.html
+++ b/web/redirect-external-links-to-new-tab/index.html
@@ -328,7 +328,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "<p>As Pelican can use Markdown to render it's ....."
+          text: "Tibor Simon - <p>As Pelican can use Markdown to render it's ....."
         }
       }
     }
