--- a/ios/local-mathjax-in-ios-apps/index.html
+++ b/ios/local-mathjax-in-ios-apps/index.html
@@ -430,7 +430,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "<p>Integrating MathJax locally in an iOS app ....."
+          text: "Tibor Simon - <p>Integrating MathJax locally in an iOS app ....."
         }
       }
     }
