--- a/python/fuzzy-search-and-sort-algorithm/index.html
+++ b/python/fuzzy-search-and-sort-algorithm/index.html
@@ -461,7 +461,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "<p>What do you do, if your users may not know ....."
+          text: "Tibor Simon - <p>What do you do, if your users may not know ....."
         }
       }
     }
