--- a/python/get-half-of-the-list-in-pelican/index.html
+++ b/python/get-half-of-the-list-in-pelican/index.html
@@ -361,7 +361,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "<p>As I was creating my site, I wanted to ....."
+          text: "Tibor Simon - <p>As I was creating my site, I wanted to ....."
         }
       }
     }
