--- a/python/mandatory-arbitrary-order/index.html
+++ b/python/mandatory-arbitrary-order/index.html
@@ -368,7 +368,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "<p>What regular expression pattern would you ....."
+          text: "Tibor Simon - <p>What regular expression pattern would you ....."
         }
       }
     }
