--- a/programming/java-shooter-game/index.html
+++ b/programming/java-shooter-game/index.html
@@ -406,7 +406,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - <p>During the last semester I had a subject ....."
+          text: "Tibor Simon - During the last semester I had a subject that ....."
         }
       }
     }
