--- a/web/chartjs-with-subtabbed-tabs/index.html
+++ b/web/chartjs-with-subtabbed-tabs/index.html
@@ -317,7 +317,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - <p>Chart.js is a bit tricky to use if you have ....."
+          text: "Tibor Simon - Chart.js is a bit tricky to use if you have ....."
         }
       }
     }
