--- a/dsp/generating-sinusoid-signals/index.html
+++ b/dsp/generating-sinusoid-signals/index.html
@@ -579,7 +579,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - <p>Generating sinusoid signals is often the ....."
+          text: "Tibor Simon - Generating sinusoid signals is often the first ....."
         }
       }
     }
