--- a/guitar/tortex-time/index.html
+++ b/guitar/tortex-time/index.html
@@ -797,7 +797,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - <p>I have bought 60 piece of guitar picks to ....."
+          text: "Tibor Simon - I have bought 60 piece of guitar picks to make ....."
         }
       }
     }
