--- a/python/collect-all-nouns-in-hungarian/index.html
+++ b/python/collect-all-nouns-in-hungarian/index.html
@@ -515,7 +515,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - <p>I had to create a searchable noun list in ....."
+          text: "Tibor Simon - I had to create a searchable noun list in ....."
         }
       }
     }
