--- a/archives.html
+++ b/archives.html
@@ -304,6 +304,12 @@
 </div>
     </div>
 
+    ​<script type="text/javascript">
+    var addthis_config = addthis_config||{};
+        addthis_config.data_track_addressbar = false;
+        addthis_config.data_track_clickback = false;
+    </script>
+
     <!-- Scripts -->
       <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8" async></script>
         <script type="text/javascript">
