--- a/python/get-half-of-the-list-in-pelican/index.html
+++ b/python/get-half-of-the-list-in-pelican/index.html
@@ -359,6 +359,7 @@ s.setAttribute('data-timestamp', +new Date());
 
     <!-- Scripts -->
       <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8" async></script>
+
   <script type="text/javascript" src="http://tiborsimon.disqus.com/count.js" id="dsq-count-scr" async></script>
 
   <script type="text/javascript">
@@ -369,12 +370,20 @@ s.setAttribute('data-timestamp', +new Date());
           via: "tiborsimonio",
           text: "Tibor Simon - As I was creating my site, I wanted to split a ....."
         }
+      },
+      url_transforms : {
+           shorten: {
+                twitter: 'bitly'
+           }
+      },
+      shorteners : {
+           bitly : {}
       }
     }
   </script>
 
 
-      <script>
+      <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
