--- a/dsp/generating-sinusoid-signals/index.html
+++ b/dsp/generating-sinusoid-signals/index.html
@@ -586,7 +586,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - Generating sinusoid signals is often the first ....."
+          text: "Tibor Simon - Generating sinusoid signals is often the first step for ....."
         }
       },
       url_transforms : {
