--- a/embedded/slotcar-race/index.html
+++ b/embedded/slotcar-race/index.html
@@ -383,7 +383,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - At the university me and my partner have faced ....."
+          text: "Tibor Simon - At the university me and my partner have faced a midterm project ....."
         }
       },
       url_transforms : {
