--- a/guitar/tortex-time/index.html
+++ b/guitar/tortex-time/index.html
@@ -804,7 +804,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - I have bought 60 piece of guitar picks to make ....."
+          text: "Tibor Simon - I have bought 60 piece of guitar picks to make it impossible to ....."
         }
       },
       url_transforms : {
