--- a/ios/local-mathjax-in-ios-apps/index.html
+++ b/ios/local-mathjax-in-ios-apps/index.html
@@ -437,7 +437,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - Integrating MathJax locally in an iOS app to ....."
+          text: "Tibor Simon - Integrating MathJax locally in an iOS app to be able to use ....."
         }
       },
       url_transforms : {
