--- a/programming/java-shooter-game/index.html
+++ b/programming/java-shooter-game/index.html
@@ -413,7 +413,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - During the last semester I had a subject that ....."
+          text: "Tibor Simon - During the last semester I had a subject that required to create ....."
         }
       },
       url_transforms : {
