--- a/python/collect-all-nouns-in-hungarian/index.html
+++ b/python/collect-all-nouns-in-hungarian/index.html
@@ -522,7 +522,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - I had to create a searchable noun list in ....."
+          text: "Tibor Simon - I had to create a searchable noun list in hungarian without any ....."
         }
       },
       url_transforms : {
