--- a/python/fuzzy-search-and-sort-algorithm/index.html
+++ b/python/fuzzy-search-and-sort-algorithm/index.html
@@ -468,7 +468,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - What do you do, if your users may not know ....."
+          text: "Tibor Simon - What do you do, if your users may not know exactly what they are ....."
         }
       },
       url_transforms : {
