--- a/python/get-half-of-the-list-in-pelican/index.html
+++ b/python/get-half-of-the-list-in-pelican/index.html
@@ -368,7 +368,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - As I was creating my site, I wanted to split a ....."
+          text: "Tibor Simon - As I was creating my site, I wanted to split a list of articles ....."
         }
       },
       url_transforms : {
