--- a/python/mandatory-arbitrary-order/index.html
+++ b/python/mandatory-arbitrary-order/index.html
@@ -375,7 +375,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - What regular expression pattern would you use ....."
+          text: "Tibor Simon - What regular expression pattern would you use if you want to ....."
         }
       },
       url_transforms : {
