--- a/tools/buspirate-setup-for-osx/index.html
+++ b/tools/buspirate-setup-for-osx/index.html
@@ -341,7 +341,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - As I have switched to mac in the past days, I ....."
+          text: "Tibor Simon - As I have switched to mac in the past days, I want to set up my ....."
         }
       },
       url_transforms : {
