--- a/web/chartjs-with-subtabbed-tabs/index.html
+++ b/web/chartjs-with-subtabbed-tabs/index.html
@@ -324,7 +324,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - Chart.js is a bit tricky to use if you have ....."
+          text: "Tibor Simon - Chart.js is a bit tricky to use if you have dynamic tabs on your ....."
         }
       },
       url_transforms : {
