--- a/programming/writing-an-equation-engine/index.html
+++ b/programming/writing-an-equation-engine/index.html
@@ -778,7 +778,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - In the previous article we have discussed the ....."
+          text: "Tibor Simon - In the previous article we have discussed the 5 ways you can ....."
         }
       },
       url_transforms : {
