--- a/web/redirect-external-links-to-new-tab/index.html
+++ b/web/redirect-external-links-to-new-tab/index.html
@@ -335,7 +335,7 @@ s.setAttribute('data-timestamp', +new Date());
       passthrough : {
         twitter: {
           via: "tiborsimonio",
-          text: "Tibor Simon - As Pelican can use Markdown to render it's ....."
+          text: "Tibor Simon - As Pelican can use Markdown to render it's contents, and ....."
         }
       },
       url_transforms : {
