--- a/python/collect-all-nouns-in-hungarian/index.html
+++ b/python/collect-all-nouns-in-hungarian/index.html
@@ -347,119 +347,119 @@ s.setAttribute('data-timestamp', +new Date());
       </div>
       <div class="box">
 <aside class="tag-list">
-  <h2 class="widget-title">Tag Cloud</h2>
+  <h2 class="widget-title"><a href="https://tiborsimon.io/tags.html">Tags</a></h2>
   <div class="tagcloud">
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/LaTEX.html">#LaTEX</a>
+        <a href="https://tiborsimon.io/tag/LaTEX.html">LaTEX</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/accelerometer.html">#accelerometer</a>
+        <a href="https://tiborsimon.io/tag/accelerometer.html">accelerometer</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/basics.html">#basics</a>
+        <a href="https://tiborsimon.io/tag/basics.html">basics</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/bootstrap.html">#bootstrap</a>
+        <a href="https://tiborsimon.io/tag/bootstrap.html">bootstrap</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/chart.html">#chart</a>
+        <a href="https://tiborsimon.io/tag/chart.html">chart</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/data.html">#data</a>
+        <a href="https://tiborsimon.io/tag/data.html">data</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/device.html">#device</a>
+        <a href="https://tiborsimon.io/tag/device.html">device</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/dsp.html">#dsp</a>
+        <a href="https://tiborsimon.io/tag/dsp.html">dsp</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/dunlop.html">#dunlop</a>
+        <a href="https://tiborsimon.io/tag/dunlop.html">dunlop</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/embedded.html">#embedded</a>
+        <a href="https://tiborsimon.io/tag/embedded.html">embedded</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/equation.html">#equation</a>
+        <a href="https://tiborsimon.io/tag/equation.html">equation</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/fuzzy.html">#fuzzy</a>
+        <a href="https://tiborsimon.io/tag/fuzzy.html">fuzzy</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/game.html">#game</a>
+        <a href="https://tiborsimon.io/tag/game.html">game</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/guitar.html">#guitar</a>
+        <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/hack.html">#hack</a>
+        <a href="https://tiborsimon.io/tag/hack.html">hack</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/ios.html">#ios</a>
+        <a href="https://tiborsimon.io/tag/ios.html">ios</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/java.html">#java</a>
+        <a href="https://tiborsimon.io/tag/java.html">java</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/javascript.html">#javascript</a>
+        <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/jinja2.html">#jinja2</a>
+        <a href="https://tiborsimon.io/tag/jinja2.html">jinja2</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/lists.html">#lists</a>
+        <a href="https://tiborsimon.io/tag/lists.html">lists</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/math.html">#math</a>
+        <a href="https://tiborsimon.io/tag/math.html">math</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/parameter.html">#parameter</a>
+        <a href="https://tiborsimon.io/tag/parameter.html">parameter</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/pelican.html">#pelican</a>
+        <a href="https://tiborsimon.io/tag/pelican.html">pelican</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/permutation.html">#permutation</a>
+        <a href="https://tiborsimon.io/tag/permutation.html">permutation</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/pick.html">#pick</a>
+        <a href="https://tiborsimon.io/tag/pick.html">pick</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/regexp.html">#regexp</a>
+        <a href="https://tiborsimon.io/tag/regexp.html">regexp</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/search.html">#search</a>
+        <a href="https://tiborsimon.io/tag/search.html">search</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/signals.html">#signals</a>
+        <a href="https://tiborsimon.io/tag/signals.html">signals</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/sorting.html">#sorting</a>
+        <a href="https://tiborsimon.io/tag/sorting.html">sorting</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/soup.html">#soup</a>
+        <a href="https://tiborsimon.io/tag/soup.html">soup</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/statistics.html">#statistics</a>
+        <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/swift.html">#swift</a>
+        <a href="https://tiborsimon.io/tag/swift.html">swift</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/tools.html">#tools</a>
+        <a href="https://tiborsimon.io/tag/tools.html">tools</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/tortextime.html">#tortextime</a>
+        <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/web.html">#web</a>
+        <a href="https://tiborsimon.io/tag/web.html">web</a>
       </span>
   </div>
 </aside>
 <!-- .widget_tag_cloud -->      </div>
       <div class="box">
 <aside class="category-list">
-  <h2 class="widget-title">Categories</h2>
+  <h2 class="widget-title"><a href="https://tiborsimon.io/categories.html">Categories</a></h2>
   <ul>
       <li><a href="https://tiborsimon.io/category/dsp.html" title="Architecture Category Posts">dsp</a> (1)</li>
       <li><a href="https://tiborsimon.io/category/embedded.html" title="Architecture Category Posts">embedded</a> (1)</li>
@@ -518,14 +518,15 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 </div>    </div>
+    
     ​<script type="text/javascript">
     var addthis_config = addthis_config||{};
         addthis_config.data_track_addressbar = false;
         addthis_config.data_track_clickback = false;
     </script>
-    <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8" async></script>
+    <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
-  <script type="text/javascript" src="http://tiborsimon.disqus.com/count.js" id="dsq-count-scr" async></script>
+  <script type="text/javascript" src="http://tiborsimon.disqus.com/count.js" id="dsq-count-scr"></script>
 
   <script type="text/javascript">
     var addthis_share = addthis_share || {}
@@ -548,19 +549,18 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
 
-      <script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-68408613-1', 'auto');
-        ga('send', 'pageview');
+      ga('create', 'UA-68408613-1', 'auto');
+      ga('send', 'pageview');
+    </script>
 
-      </script>
-
-      <!-- Go to www.addthis.com/dashboard to customize your tools -->
-      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55feae79d6d0348d" async></script>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55feae79d6d0348d"></script>
 
   </body>
 </html>
