--- a/archives.html
+++ b/archives.html
@@ -76,7 +76,7 @@
 </div>
   <h3><a href="https://tiborsimon.io/guitar/tortex-time/">Tortex time</a></h3>
 
-  <div class="article-summary"><p>I have bought 60 piece of guitar picks to make it impossible to run out of pick in the next 4-5 years.  I am going to keep track of every pick, so you can follow the progress with me :)</p></div>
+  <div class="article-summary">I have bought 60 piece of guitar picks to make it impossible to run out of pick in the next 4-5 years.  I am going to keep track of every pick, so you can follow the progress with me :)</div>
 
 <div class="article-categories">
   <!-- CATEGORY -->
@@ -85,7 +85,7 @@
 
   <!-- TAGS -->
       <i class="fa fa-tags padded-icon"></i>
-          <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>,           <a href="https://tiborsimon.io/tag/pick.html">pick</a>,           <a href="https://tiborsimon.io/tag/dunlop.html">dunlop</a>,           <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>,           <a href="https://tiborsimon.io/tag/data.html">data</a>,           <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
+          <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>,           <a href="https://tiborsimon.io/tag/pick.html">pick</a>,           <a href="https://tiborsimon.io/tag/dunlop.html">dunlop</a>,           <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>,           <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
   <!-- SERIES -->
 
   <!-- GITHUB -->
@@ -312,7 +312,7 @@
     </ul>
   </div>
 </div>    </div>
-    
+
     ​<script type="text/javascript">
     var addthis_config = addthis_config||{};
         addthis_config.data_track_addressbar = false;
