--- a/web/chartjs-with-subtabbed-tabs/index.html
+++ b/web/chartjs-with-subtabbed-tabs/index.html
@@ -167,9 +167,6 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/chart.html">chart</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/data.html">data</a>
-      </span>
-      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/device.html">device</a>
       </span>
       <span class="tagcloud-button">
@@ -320,7 +317,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 </div>    </div>
-    
+
     ​<script type="text/javascript">
     var addthis_config = addthis_config||{};
         addthis_config.data_track_addressbar = false;
@@ -348,6 +345,10 @@ s.setAttribute('data-timestamp', +new Date());
            bitly : {}
       }
     }
+  </script>
+
+  <script>
+    
   </script>
 
 
