--- a/dsp/generating-sinusoid-signals/index.html
+++ b/dsp/generating-sinusoid-signals/index.html
@@ -420,9 +420,6 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/chart.html">chart</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/data.html">data</a>
-      </span>
-      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/device.html">device</a>
       </span>
       <span class="tagcloud-button">
@@ -573,7 +570,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 </div>    </div>
-    
+
     ​<script type="text/javascript">
     var addthis_config = addthis_config||{};
         addthis_config.data_track_addressbar = false;
@@ -601,6 +598,10 @@ s.setAttribute('data-timestamp', +new Date());
            bitly : {}
       }
     }
+  </script>
+
+  <script>
+    
   </script>
 
 
