--- a/ios/local-mathjax-in-ios-apps/index.html
+++ b/ios/local-mathjax-in-ios-apps/index.html
@@ -275,9 +275,6 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/chart.html">chart</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/data.html">data</a>
-      </span>
-      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/device.html">device</a>
       </span>
       <span class="tagcloud-button">
@@ -428,7 +425,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 </div>    </div>
-    
+
     ​<script type="text/javascript">
     var addthis_config = addthis_config||{};
         addthis_config.data_track_addressbar = false;
@@ -456,6 +453,10 @@ s.setAttribute('data-timestamp', +new Date());
            bitly : {}
       }
     }
+  </script>
+
+  <script>
+    
   </script>
 
 
