--- a/python/get-half-of-the-list-in-pelican/index.html
+++ b/python/get-half-of-the-list-in-pelican/index.html
@@ -211,9 +211,6 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/chart.html">chart</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/data.html">data</a>
-      </span>
-      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/device.html">device</a>
       </span>
       <span class="tagcloud-button">
@@ -364,7 +361,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 </div>    </div>
-    
+
     ​<script type="text/javascript">
     var addthis_config = addthis_config||{};
         addthis_config.data_track_addressbar = false;
@@ -392,6 +389,10 @@ s.setAttribute('data-timestamp', +new Date());
            bitly : {}
       }
     }
+  </script>
+
+  <script>
+    
   </script>
 
 
