--- a/tools/buspirate-setup-for-osx/index.html
+++ b/tools/buspirate-setup-for-osx/index.html
@@ -184,9 +184,6 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/chart.html">chart</a>
       </span>
       <span class="tagcloud-button">
-        <a href="https://tiborsimon.io/tag/data.html">data</a>
-      </span>
-      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/device.html">device</a>
       </span>
       <span class="tagcloud-button">
@@ -337,7 +334,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 </div>    </div>
-    
+
     ​<script type="text/javascript">
     var addthis_config = addthis_config||{};
         addthis_config.data_track_addressbar = false;
@@ -365,6 +362,10 @@ s.setAttribute('data-timestamp', +new Date());
            bitly : {}
       }
     }
+  </script>
+
+  <script>
+    
   </script>
 
 
