--- a/dsp/generating-sinusoid-signals/index.html
+++ b/dsp/generating-sinusoid-signals/index.html
@@ -75,7 +75,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">Generating sinusoid signals</h1>
 
               <div class="article-info">
@@ -319,7 +318,6 @@ s = sin(2*pi*3*t);
 </ol>
 </div>
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -357,6 +355,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
 <aside class="series-widget">
@@ -601,7 +601,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
