--- a/embedded/slotcar-race/index.html
+++ b/embedded/slotcar-race/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">SlotCar Race</h1>
 
               <div class="article-info">
@@ -165,7 +164,6 @@ Right at this moment, the car was switched to state three, in which the algorith
 <h1>Summary</h1>
 <p>With this algoritm you will be able to have a strong foundtation for your own algorithm if you are faceing a similar contest. Feel free to contribute to the algorithm, to make it more durable.</p>
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -203,6 +201,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -407,7 +407,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
