--- a/guitar/tortex-time/index.html
+++ b/guitar/tortex-time/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">Tortex time</h1>
 
               <div class="article-info">
@@ -102,11 +101,11 @@
 
     <div class="row">
       <div class="6u 12u(mobile)">
-        <p>I have decided to buy a bunch of guitar picks at once to save money and time. I won't need to go in the music store every other week, and I won't have to pay the extra price in the local midtown music stores. And that's not all. I also can create a usage statistic, about how I use guitar picks.</p>
+        <p>I have decided to buy a bunch of guitar picks at once to save money and time. I won't need to go in the music store every other week, and I won't have to pay the extra price of the local midtown music stores. And that's not all. I also can create a usage statistic, about how I use guitar picks.</p>
 
         <p>I numbered every pick I've got - all sixty of them - to keep track of the lifetime. I will also keep track of my guitar sessions to be able to correlate the usage to the actual wearing.</p>
 
-        <p>Follow me on twitter (<a href="https://twitter.com/tiborsimonio" target="_blank">@tiborsimonio</a>) of search for the <a href="https://twitter.com/search?q=%23tortextime" target="_blank">#tortextime</a> hashtag to be up to date :)</p>
+        <p>Follow me on twitter (<a href="https://twitter.com/tiborsimonio" target="_blank">@tiborsimonio</a>) or search for the <a href="https://twitter.com/search?q=%23tortextime" target="_blank">#tortextime</a> hashtag to be up to date :)</p>
       </div>
       <div class="6u 12u(mobile)">
         <a class="twitter-timeline" href="https://twitter.com/hashtag/tortextime" data-widget-id="704378995211632640" height="340">#tortextime Tweets</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -114,9 +113,9 @@
     </div>
 
     <div class="gallery">
-      <img class="jslghtbx-thmb" src="/images/articles/tortex-time/tortex-time-main.jpg" alt="Tortex time main image. 60 picks on the table." data-jslghtbx data-jslghtbx-caption="60 picks on the table." data-jslghtbx-group="tortex-time-group" />
-      <img class="jslghtbx-thmb" src="/images/articles/tortex-time/tortex-time-stack.jpg" alt="Tortex time 60 pick tall stack." data-jslghtbx data-jslghtbx-caption="60 pick tall stack." data-jslghtbx-group="tortex-time-group" />
-      <img class="jslghtbx-thmb" src="/images/articles/tortex-time/tortex-time-numbering.jpg" alt="Tortex time pick numbering 1-60." data-jslghtbx data-jslghtbx-caption="Pick numbering 1-60." data-jslghtbx-group="tortex-time-group" />
+      <img class="jslghtbx-thmb" src="/images/articles/tortex-time/tortex-time-main.jpg" alt="Tortex time main image. 60 picks on the table." data-jslghtbx data-jslghtbx-caption="58 picks on the table. 2 other picks have been given as a gift :)" data-jslghtbx-group="tortex-time-group" />
+      <img class="jslghtbx-thmb" src="/images/articles/tortex-time/tortex-time-stack.jpg" alt="Tortex time 60 pick tall stack." data-jslghtbx data-jslghtbx-caption="58 pick tall stack." data-jslghtbx-group="tortex-time-group" />
+      <img class="jslghtbx-thmb" src="/images/articles/tortex-time/tortex-time-numbering.jpg" alt="Tortex time pick numbering 1-60." data-jslghtbx data-jslghtbx-caption="Pick numbering 3-60. The first two was given as a gift." data-jslghtbx-group="tortex-time-group" />
       <img class="jslghtbx-thmb" src="/images/articles/tortex-time/tortex-time-deviation.jpg" alt="Tortex time manufacturing deviation." data-jslghtbx data-jslghtbx-caption="Manufacturing deviation in the painting." data-jslghtbx-group="tortex-time-group" />
     </div>
 
@@ -129,7 +128,7 @@
           <span class="pick-overlay">1</span>
           <img class="tortex-img" src="/images/articles/tortex-time/pick-none.png" alt="1st pick image." width="50px" />
         <div class="tortex-descr">
-          <div><br />Gifted away</div>
+          <div><br />Given as a gift</div>
         </div>
       </div>
 
@@ -137,7 +136,7 @@
           <span class="pick-overlay">2</span>
           <img class="tortex-img" src="/images/articles/tortex-time/pick-none.png" alt="2nd pick image." width="50px" />
         <div class="tortex-descr">
-          <div><br />Gifted away</div>
+          <div><br />Given as a gift</div>
         </div>
       </div>
 
@@ -612,7 +611,6 @@
     </div>
   
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -650,6 +648,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -854,7 +854,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
