--- a/ios/local-mathjax-in-ios-apps/index.html
+++ b/ios/local-mathjax-in-ios-apps/index.html
@@ -72,12 +72,6 @@
           <div id="content">
             <article>
 
-<div class="github-button">
-<a href="https://github.com/tiborsimon" target="_blank" class="icon"><i class="fa fa-github-alt"></i></a>
-<a href="https://github.com/tiborsimon/ios-local-mathjax-template" target="_blank">Goto repo</a>
-<a href="https://github.com/tiborsimon/ios-local-mathjax-template/releases/latest" target="_blank"><i class="fa fa-download"></i> latest release</a>
-</div>
-
               <h1 class="article-title">Local MathJax in iOS apps</h1>
 
               <div class="article-info">
@@ -160,6 +154,15 @@
 
 <p>To be able to use LaTEX, a third party engine is needed to produce renderable html from it. I chose <a href="https://www.mathjax.org">MathJax</a> for this purpose.</p>
 <h2>Downloading the external</h2>
+<div class="gallery">
+  <img class="jslghtbx-thmb" src="/images/articles/mathjax-ios/mathjax-ios-01.jpg" alt="" data-jslghtbx data-jslghtbx-caption="" data-jslghtbx-group="mathjax-ios-group" />
+  <img class="jslghtbx-thmb" src="/images/articles/mathjax-ios/mathjax-ios-02.jpg" alt="" data-jslghtbx data-jslghtbx-caption="" data-jslghtbx-group="mathjax-ios-group" />
+  <img class="jslghtbx-thmb" src="/images/articles/mathjax-ios/mathjax-ios-03.jpg" alt="" data-jslghtbx data-jslghtbx-caption="" data-jslghtbx-group="mathjax-ios-group" />
+  <img class="jslghtbx-thmb" src="/images/articles/mathjax-ios/mathjax-ios-04.jpg" alt="" data-jslghtbx data-jslghtbx-caption="" data-jslghtbx-group="mathjax-ios-group" />
+  <img class="jslghtbx-thmb" src="/images/articles/mathjax-ios/mathjax-ios-05.jpg" alt="" data-jslghtbx data-jslghtbx-caption="" data-jslghtbx-group="mathjax-ios-group" />
+  <img class="jslghtbx-thmb" src="/images/articles/mathjax-ios/mathjax-ios-06.jpg" alt="" data-jslghtbx data-jslghtbx-caption="" data-jslghtbx-group="mathjax-ios-group" />
+</div>
+
 <h2>Credits</h2>
 <table>
 <thead>
@@ -185,12 +188,6 @@
 </tr>
 </tbody>
 </table>
-
-<div class="github-button">
-<a href="https://github.com/tiborsimon" target="_blank" class="icon"><i class="fa fa-github-alt"></i></a>
-<a href="https://github.com/tiborsimon/ios-local-mathjax-template" target="_blank">Goto repo</a>
-<a href="https://github.com/tiborsimon/ios-local-mathjax-template/releases/latest" target="_blank"><i class="fa fa-download"></i> latest release</a>
-</div>
 
               <div class="addthis_sharing_toolbox"></div>
 
@@ -229,6 +226,13 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
+<div class="github-button">
+  <a href="https://github.com/tiborsimon" target="_blank" class="icon"><i class="fa fa-github-alt"></i></a>
+  <a href="https://github.com/tiborsimon/ios-local-mathjax-template" target="_blank">Goto repo</a>
+  <a href="https://github.com/tiborsimon/ios-local-mathjax-template/releases/latest" target="_blank"><i class="fa fa-download"></i> latest release</a>
+</div>
       </div>
       <div class="box">
 <aside class="series-widget">
@@ -456,7 +460,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
