--- a/python/collect-all-nouns-in-hungarian/index.html
+++ b/python/collect-all-nouns-in-hungarian/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">Collect all nouns in hungarian</h1>
 
               <div class="article-info">
@@ -304,7 +303,6 @@ Word count: 30200 next_link: https://hu.wiktionary.org/w/index.php?title=Kateg%C
 Finished with 30248 words
 </pre></div>
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -342,6 +340,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -546,7 +546,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
