--- a/web/chartjs-with-subtabbed-tabs/index.html
+++ b/web/chartjs-with-subtabbed-tabs/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">Chart.js with subtabbed tabs</h1>
 
               <div class="article-info">
@@ -105,7 +104,6 @@ with a dropdown menu. So each main tab has its own dropdown menu.</p>
 chart canvas context and data per main tabs. This variables make it possible to remember where the user
 have left a tab, and it will be able to resume there.</p>
 <iframe width="100%" height="360" src="//jsfiddle.net/0scz7zak/2/embedded/result,js,html,css/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-
 
               <div class="addthis_sharing_toolbox"></div>
 
@@ -144,6 +142,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -348,7 +348,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
