--- a/web/redirect-external-links-to-new-tab/index.html
+++ b/web/redirect-external-links-to-new-tab/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">Redirect external links to new tab</h1>
 
               <div class="article-info">
@@ -117,7 +116,6 @@ a happy user of this method :)</p>
 <p>The method just works. Nothing fancy about it, it does what is supposed to do.
 Thank you Austin!</p>
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -155,6 +153,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -359,7 +359,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
