--- a/programming/java-shooter-game/index.html
+++ b/programming/java-shooter-game/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">Java Shooter Game</h1>
 
               <div class="article-info">
@@ -195,7 +194,6 @@ The content of the text file in this case should be like this:</p>
 <h1>Summary</h1>
 <p>The developed program isn't a full featured game but a skeleton, which you can develop further.</p>
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -233,6 +231,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -437,7 +437,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
