--- a/python/fuzzy-search-and-sort-algorithm/index.html
+++ b/python/fuzzy-search-and-sort-algorithm/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">Fuzzy search and sort algorithm</h1>
 
               <div class="article-info">
@@ -250,7 +249,6 @@ def _sort_result_list(result):
 </ol>
 </div>
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -288,6 +286,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -492,7 +492,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
