--- a/python/get-half-of-the-list-in-pelican/index.html
+++ b/python/get-half-of-the-list-in-pelican/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">Get half of the list in Pelican</h1>
 
               <div class="article-info">
@@ -150,7 +149,6 @@ JINJA_FILTERS = {
 
 <p>We ended up having two coloms of articles that are generated from a single list.</p>
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -188,6 +186,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -392,7 +392,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
