--- a/python/mandatory-arbitrary-order/index.html
+++ b/python/mandatory-arbitrary-order/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">Mandatory + arbitrary order</h1>
 
               <div class="article-info">
@@ -157,7 +156,6 @@ Not so horrible, is it. But. We are talking about permutation. If you want to ad
 <span class="nf">print</span><span class="p">(</span><span class="nf">generate_mandatory_arbitrary</span><span class="p">(</span><span class="s-Atom">&#39;abc&#39;</span><span class="p">))</span>
 </pre></div>
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -195,6 +193,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -399,7 +399,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
