--- a/tools/buspirate-setup-for-osx/index.html
+++ b/tools/buspirate-setup-for-osx/index.html
@@ -72,7 +72,6 @@
           <div id="content">
             <article>
 
-
               <h1 class="article-title">BusPirate setup for OSX</h1>
 
               <div class="article-info">
@@ -123,7 +122,6 @@ file.</p>
 <p>Source the modified file or restart the terminal, and type in <code>buspirate</code>, and
 the BusPirate terminal should open.</p>
 
-
               <div class="addthis_sharing_toolbox"></div>
 
             </article>
@@ -161,6 +159,8 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
+      </div>
+      <div class="box">
       </div>
       <div class="box">
       </div>
@@ -365,7 +365,7 @@ s.setAttribute('data-timestamp', +new Date());
   </script>
 
   <script>
-    
+
   </script>
 
 
